--- a/asset/CSS/about.css
+++ b/asset/CSS/about.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 :root {
     --main-text-color: #555;
     --main-bg-color: #fff;
@@ -119,86 +120,7 @@
   .header .row {
     margin-top: 20px;
   }
-.account-page {
-    padding: 50px 0;
-    background: radial-gradient(var(--main-bg-color), var(--smoth-pink));
-  }
-  
-  .form-container {
-    background: var(--main-bg-color);
-    backdrop-filter: blur(10px);
-    width: 300px;
-    height: 400px;
-    position: relative;
-    text-align: center;
-    padding: 20px 0;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    overflow: hidden;
-  }
-  
-  .form-container span {
-    font-weight: bold;
-    padding: 0 10px;
-    color: var(--main-text-color);
-    cursor: pointer;
-    width: 100px;
-    display: inline-block;
-  }
-  
-  .form-btn {
-    display: inline-block;
-  }
-  
-  .form-container form {
-    max-width: 300px;
-    padding: 0 20px;
-    position: absolute;
-    top: 130px;
-    transition: transform 1s;
-  }
-  
-  form input {
-    width: 100%;
-    height: 30px;
-    margin: 10px 0;
-    padding: 6px 12px;
-    border-radius: 10px;
-    border: 1px solid var(--slate-gray);
-  }
-  
-  form .btn {
-    width: 100%;
-    border: none;
-    cursor: pointer;
-    margin: 10px;
-  }
-  
-  form .btn:focus {
-    outline: none;
-  }
-  
-  #LoginForm {
-    left: -300px;
-  }
-  
-  #RegForm {
-    left: 0;
-  }
-  
-  form a {
-    font-size: 12px;
-  }
-  
-  #indicator {
-    width: 100px;
-    border: none;
-    background: var(--accent-color);
-    height: 3px;
-    margin-top: 8px;
-    transform: translateX(100px);
-    transition: transform 1s;
-  }
+  /* footer */
   .footer {
     background: #000;
     color: var(--slate-gray);
@@ -271,6 +193,4 @@
     margin-left: 20px;
     display: none;
   }
-  .dropdown { position: relative; display: inline-block; } 
-  .dropdown-content { display: none; position: absolute; background-color: #f9f9f9; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; } 
-  .dropdown-content a { color: black; padding: 12px 16px; text-decoration: none; display: block; } .dropdown-content a:hover { background-color: #f1f1f1; } .dropdown:hover .dropdown-content { display: block; }
+  
