--- a/asset/CSS/cart.css
+++ b/asset/CSS/cart.css
@@ -119,86 +119,85 @@
   .header .row {
     margin-top: 20px;
   }
-.account-page {
-    padding: 50px 0;
-    background: radial-gradient(var(--main-bg-color), var(--smoth-pink));
+  
+  .categories {
+    margin: 70px 0;
   }
   
-  .form-container {
-    background: var(--main-bg-color);
-    backdrop-filter: blur(10px);
-    width: 300px;
-    height: 400px;
-    position: relative;
+  .col-3 {
+    flex-basis: 30%;
+    min-width: 250px;
+    margin-bottom: 30px;
+  }
+  
+  .col-3 img {
+    width: 100%;
+    transition: 0.5s;
+    border-radius: 10px;
+  }
+  
+  .col-3 img:hover {
+    scale: 1.1;
+  }
+  
+  .small-container {
+    max-width: 1080px;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+  
+  .col-4 {
+    flex-basis: 25%;
+    padding: 10px;
+    min-width: 200px;
+    margin-bottom: 50px;
+    transition: transform 0.5s;
+  }
+  
+  .col-4 img {
+    width: 100%;
+    border-radius: 10px;
+  }
+  
+  .title {
     text-align: center;
-    padding: 20px 0;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    overflow: hidden;
-  }
-  
-  .form-container span {
-    font-weight: bold;
-    padding: 0 10px;
+    margin: 0 auto 80px;
+    position: relative;
+    line-height: 60px;
     color: var(--main-text-color);
-    cursor: pointer;
-    width: 100px;
-    display: inline-block;
   }
   
-  .form-btn {
-    display: inline-block;
-  }
-  
-  .form-container form {
-    max-width: 300px;
-    padding: 0 20px;
-    position: absolute;
-    top: 130px;
-    transition: transform 1s;
-  }
-  
-  form input {
-    width: 100%;
-    height: 30px;
-    margin: 10px 0;
-    padding: 6px 12px;
-    border-radius: 10px;
-    border: 1px solid var(--slate-gray);
-  }
-  
-  form .btn {
-    width: 100%;
-    border: none;
-    cursor: pointer;
-    margin: 10px;
-  }
-  
-  form .btn:focus {
-    outline: none;
-  }
-  
-  #LoginForm {
-    left: -300px;
-  }
-  
-  #RegForm {
-    left: 0;
-  }
-  
-  form a {
-    font-size: 12px;
-  }
-  
-  #indicator {
-    width: 100px;
-    border: none;
+  .title::after {
+    content: "";
     background: var(--accent-color);
-    height: 3px;
-    margin-top: 8px;
-    transform: translateX(100px);
-    transition: transform 1s;
+    width: 80px;
+    height: 5px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
   }
+  
+  h4 {
+    color: var(--main-text-color);
+    font-weight: normal;
+  }
+  
+  .col-4 p {
+    font-size: 14px;
+  }
+  
+  .rating .fa {
+    color: var(--accent-color);
+  }
+  
+  .col-4:hover {
+    transform: translateY(-5px);
+  }
+
+  /* footer */
   .footer {
     background: #000;
     color: var(--slate-gray);
@@ -271,6 +270,96 @@
     margin-left: 20px;
     display: none;
   }
-  .dropdown { position: relative; display: inline-block; } 
-  .dropdown-content { display: none; position: absolute; background-color: #f9f9f9; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1; } 
-  .dropdown-content a { color: black; padding: 12px 16px; text-decoration: none; display: block; } .dropdown-content a:hover { background-color: #f1f1f1; } .dropdown:hover .dropdown-content { display: block; }
+  
+  /* Media Quer for menu */
+  
+  @media only screen and (max-width: 800px) {
+    nav ul {
+      position: absolute;
+      top: 70px;
+      left: 0;
+      background: #333;
+      width: 100%;
+      overflow: hidden;
+      transition: max-height 0.5s;
+    }
+  
+    nav ul li {
+      display: block;
+      margin-right: 50px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+  
+    nav ul li a {
+      color: var(--main-bg-color);
+    }
+  
+    .menu-icon {
+      display: block;
+      cursor: pointer;
+    }
+  }
+
+  /* Cart Items Details */
+  .cart-page {
+    margin: 30px auto;
+  }
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  .cart-info {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  th {
+    text-align: left;
+    padding: 5px;
+    color: var(--main-bg-color);
+    background: var(--accent-color);
+    font-weight: normal;
+  }
+  
+  td {
+    padding: 10px 5px;
+  }
+  
+  td input {
+    width: 40px;
+    height: 30px;
+    padding: 5px;
+  }
+  
+  td a {
+    color: var(--accent-color);
+    font-size: 12px;
+  }
+  
+  td img {
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+  }
+  
+  .total-price {
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .total-price table {
+    border-top: 3px solid var(--accent-color);
+    width: 100%;
+    max-width: 400px;
+  }
+  
+  td:last-child {
+    text-align: right;
+  }
+  
+  th:last-child {
+    text-align: right;
+  }
